WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282804
Non-unified source build fix of November 2024
https://bugs.webkit.org/show_bug.cgi?id=282804
Summary
Non-unified source build fix of November 2024
Fujii Hironori
Reported
2024-11-07 19:42:10 PST
Non-unified source build fix of November 2024
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2024-11-07 19:47:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36368
EWS
Comment 2
2024-11-07 20:34:57 PST
Committed
286315@main
(88df2eaeea87): <
https://commits.webkit.org/286315@main
> Reviewed commits have been landed. Closing PR #36368 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-11-07 20:35:15 PST
<
rdar://problem/139488035
>
Fujii Hironori
Comment 4
2024-11-09 14:48:12 PST
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/36445
EWS
Comment 5
2024-11-09 15:00:27 PST
Committed
286389@main
(f6fbf020bc1e): <
https://commits.webkit.org/286389@main
> Reviewed commits have been landed. Closing PR #36445 and removing active labels.
Fujii Hironori
Comment 6
2024-11-18 13:55:30 PST
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/36817
EWS
Comment 7
2024-11-18 14:33:39 PST
Committed
286759@main
(31b2d831fa9d): <
https://commits.webkit.org/286759@main
> Reviewed commits have been landed. Closing PR #36817 and removing active labels.
Fujii Hironori
Comment 8
2024-11-21 23:22:10 PST
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/37002
EWS
Comment 9
2024-11-22 00:35:06 PST
Committed
286942@main
(e7db9995a39e): <
https://commits.webkit.org/286942@main
> Reviewed commits have been landed. Closing PR #37002 and removing active labels.
Fujii Hironori
Comment 10
2024-11-24 16:27:41 PST
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/37106
EWS
Comment 11
2024-11-24 16:31:52 PST
Committed
287045@main
(33d85c5222d1): <
https://commits.webkit.org/287045@main
> Reviewed commits have been landed. Closing PR #37106 and removing active labels.
Fujii Hironori
Comment 12
2024-12-16 16:26:14 PST
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/38044
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug