Fix non-unified source builds of November 2024 (part 2) https://bugs.webkit.org/show_bug.cgi?id=282804

Unreviewed non-unified source build fix.

* Source/WebCore/Modules/url-pattern/URLPatternParser.cpp:
* Source/WebCore/Modules/url-pattern/URLPatternParser.h:
* Source/WebKit/WebProcess/InjectedBundle/API/c/WKBundleRangeHandle.cpp:

Canonical link: https://commits.webkit.org/286389@main