Source/WebCore/Modules/url-pattern/URLPatternParser.h
@@ -25,6 +25,9 @@
 
 #pragma once
 
+#include "URLPatternCanonical.h"
+#include <wtf/text/WTFString.h>
+
 namespace WebCore {
 namespace URLPatternUtilities {
 
